--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
             <img src="images/logo.png" alt="placeholder">
         </div>
         <div class="nav-links">
-            <a href="#">Link</a>
-            <a href="#">Link</a>
+            <a href="#reviews">Reviews</a>
+            <a href="#need-help">Hulp</a>
             <a href="#">Link</a>
             <a href="#">Link</a>
             <a href="#">Link</a>
@@ -26,12 +26,12 @@
                 <img src="images/axolotl.avif" alt="axolotl">
                 <div class="nav-price">
                     <h2>$18,39</h2>
-                    <a href="https://www.amazon.com/Mattel-Minecraft-Axolotl-Inspired-Character/dp/B08V89W31F?th=1">Koop nu!</a>
+                    <a href="https://www.amazon.com/Mattel-Minecraft-Axolotl-Inspired-Character/dp/B08V89W31F?th=1" target="_blank">Koop nu!</a>
                 </div>
             </div>
         </header>
         <main>
-            <section class="reviews">
+            <section class="reviews" id="reviews">
                 <card>
                     <div class="card-text">
                         <h3>Sarah Johnson</h3><br>
@@ -73,7 +73,7 @@
             </section>
             <section class="form">
                 <form action="send" method="POST">
-                    <section class="contact-formulier">
+                    <section class="contact-formulier" id="need-help">
                         <h1>Hulp nodig?</h1>
                         <div class="name">
                             <div class="side-by-side">
@@ -160,6 +160,9 @@
         </div>
         <div class="footer-text">
             Contact
+        </div>
+        <div class="footer-text">
+            Gemaakt door: Mickey van Veldhuizen
         </div>
     </footer>
 </body>
